<resources>
    <string name="cancel">CANCELAR</string>
    <string name="time_set">OK</string>
    <string name="app_name">LoJack</string>
    <string name="action_settings">Buscando actualizaciones</string>
    <string name="action_loading">Cargando Información</string>
    <string name="action_system_loading">Cargando información del sistema</string>
    <string name="dologin">dologin</string>
    <string name="user_name">{ Usuario }</string>
    <string name="empty_text_view"> </string>
    <string name="desc_cam_image">Imagen de la Cámara</string>
    <string name="desc_avatar_image">Avatar</string>
    <string name="default_image_descriptor">Imagen</string>
    <string name="lst_title_last_changes">Últimos cambios</string>
    <string name="lst_title_last_news">Recibiendo información</string>
    <string name="lst_title_notifications">Mensajes</string>
    <string name="lst_title_nonotifications">Usted no tiene mensajes</string>
    <string name="lst_title_alarms_list">Listado de alarmas</string>
    <string name="lst_title_alarms_agendas_list">Agendas de alarma</string>
    <string name="lst_title_notification_config">Configuración de notificaciones</string>
    <string name="lst_title_lights_agendas_list">Agendas de luces</string>
    <string name="lst_title_agenda_editor">Editar/crear agenda</string>
    <string name="lst_title_lights_list">Listado de luces</string>
    <string name="lst_title_cameras_list">Listado de camaras</string>
    <string name="lst_title_parkmode_vehicle_list">Listado de vehículos</string>
    <string name="lst_title_parkmode_dashboard">Modo Estacionado: Dashboard</string>
    <string name="lst_title_parkmode_config">Modo Estacionado: Configurar</string>
    <string name="lst_title_parkmode_history">Modo Estacionado: Historial</string>
    <string name="lst_title_history_list">Historial de recorridos</string>
    <string name="lst_title_history_point">Detalle</string>
    <string name="lst_title_vlu">ESTADO DE TUS EQUIPOS</string>
    <string name="vlu_message_alert">Verificá el estado de tu equipo</string>
    <string name="vlu_message_ok">Tu equipo funciona correctamente</string>
    <string name="lst_itm_status">Estado:</string>
    <string name="lst_itm_action">Acción:</string>
    <string name="lst_itm_last_change">Fecha y Hora</string>
    <string name="lst_itm_last_change_fullword">Cambio:</string>
    <string name="lst_itm_by"> por </string>
    <string name="status_unarmed">Desarmada</string>
    <string name="status_armed">Armada</string>
    <string name="status_unknown">Desconocido</string>
    <string name="lst_itm_5"></string>
    <string name="lbl_plate">Dominio:</string>
    <string name="lbl_speed">Vel:</string>
    <string name="lbl_speed_unit">Km/h</string>
    <string name="lbl_always">Siempre</string>
    <string name="lbl_nocontact">Sin Contacto</string>
    <string name="lbl_car_assist">Car assist</string>
    <string name="lbl_home_assist">Home assist</string>
    <string name="lbl_phone_for_sms">Tel. para SMS</string>
    <string name="lbl_tip_always">Recibirás una alerta cuando tu auto se mueva. Tené en cuenta que deberás desactivar la función cada vez que estés en tu auto.</string>
    <string name="lbl_tip_onlycontact">Solo recibirás una alerta cuando tu auto es remolcado.</string>
    <string name="lbl_start_date">Fecha de inicio</string>
    <string name="lbl_end_date">Fecha de fin</string>
    <string name="lbl_star_time">Hora de inicio</string>
    <string name="lbl_end_time">Hora de fin</string>
    <string name="lbl_notification_config_subtitle">Tildá los productos que pueden enviarte notificaciones.</string>
    <string name="title_activity_check_for_update">LoJack</string>
    <string name="title_activity_login">INGRESAR</string>
    <string name="title_request_reset">RECUPERAR CLAVE</string>
    <string name="title_activity_register">REGISTRATE</string>
    <string name="title_activity_update">MODIFICAR</string>
    <string name="title_activity_change_password">CAMBIAR CLAVE</string>
    <string name="title_activity_login_for_action_bar">LOJACK</string>
    <string name="title_parkings">PARKING</string>
    <string name="title_prevent">CAR</string>
    <string name="title_select_vehicle">Seleccionar vehículo</string>
    <string name="selectVehicleForSpeed">Velocidad Máxima</string>
    <string name="selectVehicleForZone">Determinar zona</string>
    <string name="selectVehicleForPhoneNumbers">Teléfonos de seguridad</string>
    <string name="selectVehicleForPath">Recorridos históricos</string>
    <string name="title_max_speed">Velocidad Máxima</string>
    <string name="title_select_zone">Determinar zona</string>
    <string name="title_sms_phones">Teléfonos de seguridad</string>
    <string name="title_choose_date">Determinar fecha</string>
    <string name="title_dashboard_alarms">MANEJAR ALARMAS</string>
    <string name="title_dashboard_lights">MANEJAR LUZ</string>
    <string name="title_home">HOME</string>
    <string name="title_send_panic">ENVIAR PANICO</string>
    <string name="title_log_alarm">LOG ALARMA</string>
    <string name="title_log_light">LOG LUCES</string>
    <string name="title_camera">CÁMARA</string>
    <string name="title_vlu">VLU</string>
    <string name="subtitle_sex">SEXO</string>
    <string name="subtitle_address">DIRECCIÓN</string>
    <string name="subtitle_pm_config_alarmsgen">GENERACIÓN DE ALARMAS</string>
    <string name="subtitle_agendas_repetitions">REPETICIONES</string>
    <string name="title_alert_center">SERVICIOS DE EMERGENCIAS</string>
    <string name="title_assist_center">SERVICIOS DE ASISTENCIA</string>
    <string name="cmnt_home_page">Mantén presionada la opción y arrastrala al centro de la rueda para ingresar</string>
    <string name="lbl_camera_swipe">DESLIZÁ CON TU DEDO PARA REORIENTAR LA CÁMARA</string>
    <string name="cmnt_pm_alarm_always">Siempre: Recibirás una alerta cuando tu auto se mueva. Tené en cuenta que deberás desactivar la función cada vez que estés en tu auto.</string>
    <string name="cmnt_pm_alarm_offkey">Sin contacto: Solo recibirás una alerta cuando tu auto es remolcado.</string>
    <string name="rd_main_promo_title">Viví LOAPP 2.0</string>
    <string name="rd_main_hookline">El Primer sistema de tecnología del mundo que integra la seguridad de tu auto, tu casa y tu familia</string>
    <string name="rd_default_comment"> </string>
    <string name="btn_tag_appmenu_home">Casa</string>
    <string name="btn_tag_appmenu_cars">Auto</string>
    <string name="btn_tag_appmenu_pets">Mascota</string>
    <string name="btn_tag_appmenu_apps">Lugares</string>
    <string name="btn_tag_alarms">ALARMAS</string>
    <string name="btn_tag_lights">LUCES</string>
    <string name="btn_tag_cameras">CÁMARAS</string>
    <string name="btn_tag_camera">CÁMARA</string>
    <string name="btn_tag_login">INGRESAR</string>
    <string name="btn_tag_register">REGISTRARME</string>
    <string name="btn_tag_modify">MODIFICAR</string>
    <string name="btn_tag_modify_my_data">MODIFICAR</string>
    <string name="btn_tag_change_password">MI CLAVE</string>
    <string name="btn_tag_forgotpass">RECUPERAR CLAVE</string>
    <string name="btn_tag_moreinfo">MÁS INFO SOBRE LOAPP 2.0</string>
    <string name="btn_tag_reset_password">ENVIAR</string>
    <string name="btn_tag_reset_password_back">VOLVER</string>
    <string name="btn_tag_config">Configurar</string>
    <string name="btn_tag_history">Historial</string>
    <string name="btn_SendPanic">   </string>
    <string name="btn_tag_see_log">Ver log</string>
    <string name="btn_view_log">Ver log completo</string>
    <string name="btn_agendas_list">Agendas de encendido</string>
    <string name="btn_new_agenda">CREAR AGENDA</string>
    <string name="btn_tag_go">Ir</string>
    <string name="btn_tag_gotomap">Ver en mapa</string>
    <string name="action_home">CASA</string>
    <string name="action_prevent">AUTO</string>
    <string name="action_pets">MASCOTA</string>
    <string name="action_parkings">LUGARES</string>
    <string name="action_parked_mode">ESTACIONAME</string>
    <string name="action_club_lj">CLUB LOJACK</string>
    <string name="action_legales">LEGALES</string>
    <string name="action_notif_conf">NOTIFICACIONES</string>
    <string name="btn_home">  </string>
    <string name="btn_prevent">  </string>
    <string name="btn_pets">  </string>
    <string name="btn_parkings">  </string>
    <string name="btn_tv">  </string>
    <string name="btn_cam_up"></string>
    <string name="btn_cam_down"></string>
    <string name="btn_cam_left"></string>
    <string name="btn_cam_right"></string>
    <string name="btn_panic">Señal de pánico</string>
    <string name="btnHeaderAlarms">Alarmas</string>
    <string name="btnHeaderLights">Luces</string>
    <string name="btnHeaderCameras">Cámaras</string>
    <string name="btn_footer_home"> </string>
    <string name="btn_footer_prevent"> </string>
    <string name="btn_footer_pets"> </string>
    <string name="btn_footer_config"> </string>
    <string name="btn_footer_data">Data</string>
    <string name="btn_male">Masculino</string>
    <string name="btn_female">Femenino</string>
    <string name="btn_optIn">Acepto recibir contactos de LoJack y sus compañías asociadas</string>
    <string name="btn_club_benefits">Ver beneficios</string>
    <string name="random_on">RAN ON</string>
    <string name="random_off">RAN OFF</string>
    <string name="tog_btn_default">ON/OFF</string>
    <string name="btn_lbl_back">Volver</string>
    <string name="btn_lbl_save">Grabar</string>
    <string name="btn_lbl_next">Siguiente</string>
    <string name="btn_lbl_carrecoverycenter">Central de Recupero Vehicular</string>
    <string name="btn_lojack_notif_conf">LO/JACK</string>
    <string name="btn_car_notif_conf">LO/CAR</string>
    <string name="btn_home_notif_conf">LO/HOME</string>
    <string name="btn_pet_notif_conf">LO/PETS</string>
    <string name="message"> </string>
    <string name="messages"> </string>
    <string name="hnt_doc_number">NÚMERO DE DOCUMENTO</string>
    <string name="hnt_doc_password">CLAVE DE ACCESO</string>
    <string name="hnt_doc_password1">REPETIR CLAVE</string>
    <string name="hnt_firstname">NOMBRE</string>
    <string name="hnt_apellido">APELLIDO</string>
    <string name="hnt_email">E-MAIL</string>
    <string name="hnt_area_code">CÓDIGO DE ÁREA</string>
    <string name="hnt_mobile">CELULAR</string>
    <string name="hnt_calle1">CALLE 1</string>
    <string name="hnt_calle2">CALLE 2</string>
    <string name="hnt_postal_code">CÓDIGO POSTAL</string>
    <string name="hnt_city">CIUDAD</string>
    <string name="hnt_birthdate">NACIMIENTO</string>
    <string name="hnt_password">CLAVE</string>
    <string name="hnt_actual_password">CLAVE ACTUAL</string>
    <string name="hnt_new_password">NUEVA CLAVE</string>
    <string name="hnt_retype_new_password">REINGRESE CLAVE</string>
    <string name="hnt_agenda_name">Nombre de la agenda</string>
    <string name="crt_tag_rememberme">RECORDARME</string>
    <string name="crt_tag_monday">Lunes</string>
    <string name="crt_tag_tuesday">Martes</string>
    <string name="crt_tag_wednesday">Miércoles</string>
    <string name="crt_tag_thursday">Jueves</string>
    <string name="crt_tag_friday">Viernes</string>
    <string name="crt_tag_saturday">Sábado</string>
    <string name="crt_tag_sunday">Domingo</string>
    <string name="inlohome_notclient_teaser">Lo/Home es un sistema integrado de seguridad, control y monitoreo que te permite saber todo lo que pasa en tu casa con solo mirar tu celular. En nuestro sistema exclusivo, la comunicación es permanente, incluso si se corta la luz o las líneas telefónicas.</string>
    <string name="inlohome_notclient_teaser2">Con Lo/Home podés controlar las alarmas, controlar la conexión de luces y mirar las cámaras de seguridad de tu casa desde donde estés, ya sea desde la Web o desde tu dispositivo móvil.</string>
</resources>