<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/loginObjects"
        style="@style/main_container" >

        <TableRow
            android:id="@+id/tableRow1"
            style="@style/table_portalogo"
            android:layout_marginBottom="15dp" >

            <ImageView
                android:id="@+id/ImageView01"
                style="@style/logo_on_top"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:contentDescription="@string/action_loading" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            style="@style/table_portamodal"
            android:layout_height="380dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <LinearLayout 
                style="@style/modal_container" >

                <TextView
                    android:id="@+id/loadingInfoText"
                    style="@style/modal_maintitle"
                    android:text="@string/title_activity_update" />

                <LinearLayout
                    style="@style/form_layout" >

			        <ScrollView
			            android:id="@+id/scrollView1"
			            android:layout_width="match_parent"
			            android:layout_height="fill_parent" >
			
			            <LinearLayout
			                android:layout_width="match_parent"
			                android:layout_height="match_parent"
			                android:orientation="vertical"
			                android:textAlignment="center" >

			                <Spinner
			                    android:id="@+id/documentType"
			                    style="@style/text_inputs_white_01" />
			
			                <EditText
			                    android:id="@+id/documentNumber"
			                    style="@style/text_inputs_white_01"
			                    android:clickable="false"
			                    android:enabled="false"
			                    android:hint="@string/hnt_doc_number"
			                    android:inputType="number" />
			
			                <EditText
			                    android:id="@+id/firstName"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_firstname" >
			
			                    <requestFocus />
			                </EditText>
			
			                <EditText
			                    android:id="@+id/lastName"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_apellido" />
			
			                <TextView
			                    style="@style/modal_subtitleinform"
			                    android:text="@string/subtitle_sex" />
			                
							<RadioGroup android:orientation="vertical"
							    android:layout_width="match_parent" 
							    android:layout_height="wrap_content">
			
							    <RadioButton
				                    android:id="@+id/chkMale"
				                    style="@style/checkbox_white_01"
				                    android:text="@string/btn_male" />
			
				                <RadioButton
				                    android:id="@+id/chkFemale"
				                    style="@style/checkbox_white_01"
				                    android:text="@string/btn_female" />
							</RadioGroup>
			                
			                <EditText
			                    android:id="@+id/email"
			                    style="@style/text_inputs_white_01"
			                    android:layout_marginTop="8dp"
			                    android:clickable="false"
			                    android:enabled="false"
			                    android:hint="@string/hnt_email"
			                    android:inputType="textEmailAddress" />
			
			                <TextView
			                    android:id="@+id/birthDate"
			                    style="@style/modal_subtitleinform" />

			               <TextView
			                    style="@style/modal_subtitleinform"
			                    android:text="@string/subtitle_address" />

			                <EditText
			                    android:id="@+id/areaCode"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_area_code"
			                    android:inputType="number" />
			
			                <EditText
			                    android:id="@+id/mobile"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_mobile"
			                    android:inputType="number" />
			
			                <Spinner
			                    android:id="@+id/state"
			                    style="@style/text_inputs_white_01" />
			
			                <EditText
			                    android:id="@+id/city"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_city" />
			                
			                <EditText
			                    android:id="@+id/street1"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_calle1" />
			
			                <EditText
			                    android:id="@+id/street2"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_calle2" />
			
			                <Spinner
			                    android:id="@+id/addressType"
			                    style="@style/text_inputs_white_01" />
			
			                <EditText
			                    android:id="@+id/postalCode"
			                    style="@style/text_inputs_white_01"
			                    android:hint="@string/hnt_postal_code" />
			
			                <CheckBox
			                    android:id="@+id/optIn"
			                    style="@style/checkbox_white_01"
			                    android:text="@string/btn_optIn" />
			
				            <Button
				                android:id="@+id/updateButton"
				                style="@style/btn_forward"
				                android:layout_margin="8dp"
				                android:onClick="@string/dologin"
				                android:text="@string/btn_tag_modify" />
			
			            </LinearLayout>
			        </ScrollView>

				</LinearLayout>
				
			</LinearLayout>
			
		</TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/main_promo_title"
                    android:text="@string/rd_main_promo_title"
                    style="@style/txt_mainpromo" />

            </LinearLayout>
        </TableRow>

    </LinearLayout>

</merge>