<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<!-- TODO: (Marcos) ACA EMPIEZA EL LISTADO DE AGENDAS  -->
					<TableRow
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
					
						<com.tdil.thalamus.android.gui.components.StyledTextView
							android:id="@+id/titleAlarmAgendasList"
							style="@style/modal_subtitleinform"
							android:layout_width="match_parent"
							android:layout_weight="1"
							android:text="@string/lst_title_alarms_agendas_list" />
					
					</TableRow>
					
					<TableRow
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:background="@color/bgBase"
					    android:gravity="left"
					    android:textAlignment="viewStart" >

                        <com.tdil.thalamus.android.gui.components.StyledButton style="@style/ButtonNewAgenda"
                            android:id="@+id/goToNewAgenda"
                            android:text="@string/btn_new_agenda" />

                    </TableRow>
                    
					<!-- acá loopea los items de agendas existentes -->
					<TableRow
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:background="@color/bgBase"
					    android:gravity="left"
					    android:textAlignment="viewStart" >

                        <com.tdil.thalamus.android.gui.components.StyledButton style="@style/ButtonAgendaGrayinList"
                            android:id="@+id/goToAlarmViewLog"
                            android:text="Los JUEVES a la noche" />

                    </TableRow>
                    <!-- Fin loop de agendas existentes-->

<!-- FIN DEL LISTADO DE AGENDAS -->
<!-- TODO: (Marcos) ACA EMPIEZA EL EDITOR DE AGENDAS -->
					<TableRow
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
					
						<com.tdil.thalamus.android.gui.components.StyledTextView
							android:id="@+id/titleAgendasEditor"
							style="@style/modal_subtitleinform"
							android:layout_width="match_parent"
							android:layout_weight="1"
							android:text="@string/lst_title_agenda_editor" />
					
					</TableRow>

	                <com.tdil.thalamus.android.gui.components.StyledEditText
	                    android:id="@+id/agendaName"
	                    style="@style/text_inputs_white_01"
	                    android:hint="@string/hnt_agenda_name" />

	                <!-- Fecha desde/hasta -->
	                <!-- Horario desde/hasta -->
	                
	                <com.tdil.thalamus.android.gui.components.StyledTextView
	                    style="@style/modal_subtitleinform"
	                    android:text="@string/subtitle_agendas_repetitions" />

                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepMonday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_monday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepTuesday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_tuesday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepWednesday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_wednesday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepThursday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_thursday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepFriday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_friday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepSaturday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_saturday" />
                    
                    <com.tdil.thalamus.android.gui.components.StyledCheckbox
                        android:id="@+id/agendaRepSunday"
                        style="@style/checkbox_white_01"
                        android:text="@string/crt_tag_sunday" />
<!-- FIN EDITOR DE AGENDAS -->
</merge>
