<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HomeActivity" >

    <!-- Login progress -->


    <!-- Login form -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_square"
        android:orientation="vertical" >

        <Button
            android:id="@+id/alarmas"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/btn_tag_alarms" />

        <Button
            android:id="@+id/lights"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/btn_tag_lights" />

        <Button
            android:id="@+id/cameras"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/btn_tag_cameras" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/btn_tag_modify_my_data" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/btn_tag_change_password" />

        <ImageView
            android:id="@+id/placahome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placalanding"
            android:contentDescription="Placa Home"/>
        
    </LinearLayout>

</merge>